--- a/iso/isolinux/txt.cfg
+++ b/iso/isolinux/txt.cfg
@@ -1,6 +1,6 @@
 default install
 label install
-  menu label ^Honeypot 22.04.0 (AMD64)
+  menu label ^Honeypot (AMD64)
   menu default
   kernel linux
   append vga=788 initrd=initrd.gz console-setup/ask_detect=true --
