--- a/docker/elk/docker-compose.yml
+++ b/docker/elk/docker-compose.yml
@@ -53,7 +53,7 @@ services:
         condition: service_healthy
     env_file:
      - /opt/tpot/etc/compose/elk_environment
-    image: "dtagdevsec/logstash:2204"
+    image: "sharkstriker/logstash:latest"
     volumes:
      - /data:/data
 #     - /root/tpotce/docker/elk/logstash/dist/logstash.conf:/etc/logstash/conf.d/logstash.conf
