--- a/docker/elk/logstash/Dockerfile
+++ b/docker/elk/logstash/Dockerfile
@@ -81,4 +81,5 @@ HEALTHCHECK --retries=10 CMD curl -s -XGET 'http://127.0.0.1:9600'
 #
 # Start logstash
 USER logstash:logstash
-CMD entrypoint.sh && exec /usr/share/logstash/bin/logstash --config.reload.automatic && exec service filebeat start
+CMD entrypoint.sh && exec /usr/share/logstash/bin/logstash --config.reload.automatic 
+CMD service filebeat start
