--- a/docker/elk/logstash/Dockerfile
+++ b/docker/elk/logstash/Dockerfile
@@ -30,10 +30,8 @@ RUN apt-get update -y && \
     bunzip2 *.bz2 && \
     cd /root/dist/ && \
     aria2c -s 16 -x 16 https://artifacts.elastic.co/downloads/logstash/logstash-$LS_VER-$LS_ARCH.deb && \
-    aria2c -s 16 -x 16 https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-$LS_VER-$LS_ARCH.deb && \
     dpkg -i logstash-$LS_VER-$LS_ARCH.deb && \
-    dpkg -i filebeat-$LS_VER-$LS_ARCH.deb && \
-
+    
 #    /usr/share/logstash/bin/logstash-plugin install logstash-output-gelf logstash-output-syslog && \
 #
 # Add and move files
@@ -53,14 +51,9 @@ RUN apt-get update -y && \
 
 # Copy splunk files
 
-cp splunk.conf /etc/logstash/ && \
+cp splunk.conf /data/splunk/splunk.conf && \
 
-# Copy filebeat files
 
-    cp filebeat.yml /etc/filebeat/ && \
-    cp rootCA.pem /etc/filebeat/ && \
-    cp hydra_collector_agent.crt /etc/filebeat/ && \
-    cp hydra_collector_agent.key /etc/filebeat/ && \
 
 # Setup user, groups and configs
     groupmod -g 2000 logstash && \
