--- a/etc/compose/standard.yml
+++ b/etc/compose/standard.yml
@@ -564,7 +564,15 @@ services:
     image: "sharkstriker/logstash:latest"
     volumes:
      - /data:/data
-
+     
+## Filebeat Service
+LS_VER=8.6.0
+ARCH=$(arch) && \
+  if [ "$ARCH" = "x86_64" ]; then LS_ARCH="amd64"; fi && \
+  if [ "$ARCH" = "aarch64" ]; then LS_ARCH="arm64"; fi && \
+echo "$ARCH" && \
+wget -v https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-$LS_VER-$LS_ARCH.deb && \
+dpkg -i filebeat-$LS_VER-$LS_ARCH.deb
 
 ## Map Redis Service
   map_redis:
