--- a/iso/installer/tpot.conf
+++ b/iso/installer/tpot.conf
@@ -2,4 +2,4 @@
 # myCONF_TPOT_FLAVOR=[STANDARD, HIVE, HIVE_SENSOR, INDUSTRIAL, LOG4J, MEDICAL, MINI, SENSOR]
 myCONF_TPOT_FLAVOR='STANDARD'
 myCONF_WEB_USER='webuser'
-myCONF_WEB_PW='w3b$ecret'
+myCONF_WEB_PW='QeF8_Z-6pU6Uyp7k!9Qu'
